--- a/index.html
+++ b/index.html
@@ -5,13 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>travelease</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Merriweather:wght@900&family=Mulish:wght@700;800&family=Open+Sans:ital,wght@0,600;0,800;1,400;1,800&family=Poppins:wght@600;700&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/80488f97e5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-
+    <header class="header">
+    <nav class="nav">
+       <div class="nav-img-title">
+        <img src="./Images/Group 40071 (2).png" alt="">
+        <h2 class="nav-title"><span class="travel">Travel</span><span class="ease">Ease</span></h2>
+       </div>
+      <div class="nav-list">
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Packages</a></li>
+            <li><a href="">Testimonial</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
     </header>
     <main>
-
+        <!-- banner-section -->
+         <section class="banner-container">
+        <div class="banner-img">
+            <div class="banner-text">
+                <h2 class="banner-title">Explore Your Travel</h2>
+            <p class="banner-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis sapien urna eu phasellus.</p>
+            </div>
+            <div class="banner-input">
+                <form action="" class="banner-form">
+                <input type="text" name="where" placeholder="Where go" id="where">
+                 <select name="when" id="when">
+                    <option value="morning">When</option>
+                    <option value="morning">Morning</option>
+                    <option value="evening">Evening</option>
+                 </select>
+                 <select name="" id="select-type">
+                    <option value="select type">Select Type</option>
+                    <option value="bangladesh">Bangladesh</option>
+                    <option value="india">India</option>
+                 </select>
+                <button class="btn-banner"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
+                </form>
+                
+            </div>
+        </div>
+        </section>
     </main>
     <footer>
 
