--- a/index.html
+++ b/index.html
@@ -55,6 +55,38 @@
             </div>
         </div>
         </section>
+        <section class="populars-tours">
+              <div class="text-tour">
+                <h2 class="popular-title">Our Popular Tours</h2>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</p>
+                <p>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</p>
+                <p>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</p>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus 
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                    <button class="btn-tour">Read More</button>
+              </div>
+              <div class="tour-img">
+                <img src="./Images/Rectangle 4.png" alt="">
+              </div>
+        </section>
+        <section class="destination-section">
+           <div class="destination-title">Choose Your Destination</div>
+           <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+           <div class="img2">
+            <div><img src="./Images/Rectangle 5.png" alt=""></div>
+            <div><img src="./Images/Rectangle 8.png" alt=""></div>
+           </div>
+           <div class="img3">
+             <div><img src="./Images/Rectangle 6.png" alt=""></div>
+             <div><img src="./Images/Rectangle 7.png" alt=""></div>
+             <div><img src="./Images/Rectangle 9.png" alt=""></div>
+           </div>
+           <div class="img4">
+            <div><img src="./Images/Rectangle 11.png" alt=""></div>
+            <div><img src="./Images/Rectangle 10.png" alt=""></div>
+           </div>
+        </section>
     </main>
     <footer>
 
