--- a/index.html
+++ b/index.html
@@ -74,18 +74,44 @@
            <div class="destination-title">Choose Your Destination</div>
            <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
            <div class="img2">
-            <div><img src="./Images/Rectangle 5.png" alt=""></div>
-            <div><img src="./Images/Rectangle 8.png" alt=""></div>
+            <div class="imgone"><img src="./Images/Rectangle 5.png" alt=""><h3>Maldives</h3></div>
+            <div class="imghalf"><img src="./Images/Rectangle 8.png" alt=""><h3>Indonesia</h3></div>
            </div>
            <div class="img3">
-             <div><img src="./Images/Rectangle 6.png" alt=""></div>
-             <div><img src="./Images/Rectangle 7.png" alt=""></div>
-             <div><img src="./Images/Rectangle 9.png" alt=""></div>
-           </div>
+            <div class="imgtow"><img src="./Images/Rectangle 6.png" alt=""><h3>Srilanka</h3></div>
+            <div class="imgthree"><img src="./Images/Rectangle 7.png" alt=""><h3>North America</h3></div>
+            <div class="imgfour"><img src="./Images/Rectangle 9.png" alt=""><h3>Kashmir</h3></div>
+          </div>
            <div class="img4">
-            <div><img src="./Images/Rectangle 11.png" alt=""></div>
-            <div><img src="./Images/Rectangle 10.png" alt=""></div>
+            <div class="imgfive"><img src="./Images/Rectangle 11.png" alt=""><h3>Bangladesh</h3></div>
+            <div class="imgsix"><img src="./Images/Rectangle 10.png" alt=""><h3>Bandarban</h3></div>
            </div>
+        </section>
+        <section class="choose-section">
+          <div class="choose-text">
+            <h2 class="choose-title">Why Choose Us</h2>
+            <p class="choose-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+          </div>
+          <div class="choose-card">
+            <div class="card1">
+              <img src="hotel 1.svg" alt="">
+              <h3 class="choose-card-title">Handpicked Hotels</h3>
+              <p class="choose-card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+            <div class="card2">
+              <img src="map 1.svg" alt="">
+              <h3 class="choose-card-title">World Class Service</h3>
+              <p class="choose-card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+          </div>
+          <div class="card3">
+            <img src="price-tag 1.svg" alt="">
+            <h3 class="choose-card-title">Best Price Guarantee</h3>
+            <p class="choose-card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+          </div>
+        </section>
+        <section class="simpe-place">
+          
         </section>
     </main>
     <footer>
