added newsletter section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="banner-img">
             <div class="banner-text">
                 <h2 class="banner-title">Explore Your Travel</h2>
-            <p class="banner-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis sapien urna eu phasellus.</p>
+            <p class="banner-description">Discover bespoke journeys with Explore Your Travel, where each trip is a unique <br> tapestry of extraordinary destinations and personalized adventures.</p>
             </div>
             <div class="banner-input">
                 <form action="" class="banner-form">
@@ -58,13 +58,12 @@
         <section class="populars-tours">
               <div class="text-tour">
                 <h2 class="popular-title">Our Popular Tours</h2>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
-                <p>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</p>
-                <p>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</p>
-                <p>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</p>
-                <p>Amet consectetur. Vulputate commodo felis molestie risus 
-                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
-                    <button class="btn-tour">Read More</button>
+                <p>Embark on our popular tours, meticulously crafted for an immersive experience, blending culture, adventure, and unforgettable moments in every itinerary</p>
+                <p>Unleash the extraordinary with our uniq tours, where every itinerary is a bespoke masterpiece, crafting distinctive travel experiences that set your journey apart.</p>
+                <p>Unleash the extraordinary with our uniq tours, where every itinerary is a bespoke masterpiece, crafting distinctive travel experiences that set your journey apart.</p>
+                <p>Unleash the extraordinary with our uniq tours, where every itinerary is a bespoke masterpiece, crafting distinctive travel experiences that set your journey apart.</p>
+                <p>Embark on our sought-after tours, blending excitement and cultural richness for an unparalleled travel experience that resonates with every adventurer's heart.</p>
+                    <button class="btn-primary">Read More</button>
               </div>
               <div class="tour-img">
                 <img src="./Images/Rectangle 4.png" alt="">
@@ -110,8 +109,40 @@
             <p class="choose-card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
           </div>
         </section>
-        <section class="simpe-place">
-          
+        <section class="simpe-place-section">
+          <div class="simple-place-content">
+               <h1 class="simple-place-title popular-title">A Simple Perfect Place To Get Lost</h1>
+               <p class="simple-place-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p><br>
+               <p class="p1">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p><br>
+               <p class="p1">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+               <button class="btn-primary">See More</button>
+          </div>
+          <div class="simple-place-img">
+             <img src="./Images/Group 40089.png" alt="">
+             <h2>Watch Our Mountain in Bangladesh</h2>
+             <!-- <img src="Frame (1).svg" alt="">
+             <img src="volume-x 1.svg" alt="">
+             <img src="maximize 1.svg" alt="">
+             <img src="Frame (2).svg" alt=""> -->
+          </div>
+        </section>
+        <section class="newsletter-section">
+            <div class="newsletter-content">
+              <h2 class="newsletter-title">Newsletter</h2>
+              <p>Get your daily dose of travel news & tips. <br> Sign up today!</p>
+              <input type="text" class="name" placeholder="Enter your name">
+              <br>
+              <input type="text" class="email" placeholder="Enter your email">
+              <br>
+              <button class="btn-primary">Subscribe</button>
+
+            </div>
+            <div class="newsletter-img">
+              <img src="./Images/Rectangle 8 (1).png" alt="">
+              <div class="discount"><span class="travel">TravlEase.com</span>
+              <span class="save">Save up to 70%</span></div>
+            </div>
+           
         </section>
     </main>
     <footer>
