--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Merriweather:wght@900&family=Mulish:wght@700;800&family=Open+Sans:ital,wght@0,600;0,800;1,400;1,800&family=Poppins:wght@600;700&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/80488f97e5.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header class="header">
     <nav class="nav">
        <div class="nav-img-title">
         <img src="./Images/Group 40071 (2).png" alt="">
-        <h2 class="nav-title"><span class="travel">Travel</span><span class="ease">Ease</span></h2>
+        <h2 class="nav-title"><span class="travelnav">Travel</span><span class="ease">Ease</span></h2>
        </div>
       <div class="nav-list">
         <ul>
@@ -71,7 +72,7 @@
         </section>
         <section class="destination-section">
            <div class="destination-title">Choose Your Destination</div>
-           <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+           <p>Choose a destination that aligns with your travel goals – whether seeking relaxation in the Maldives' pristine beaches,</p>
            <div class="img2">
             <div class="imgone"><img src="./Images/Rectangle 5.png" alt=""><h3>Maldives</h3></div>
             <div class="imghalf"><img src="./Images/Rectangle 8.png" alt=""><h3>Indonesia</h3></div>
@@ -89,32 +90,31 @@
         <section class="choose-section">
           <div class="choose-text">
             <h2 class="choose-title">Why Choose Us</h2>
-            <p class="choose-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+            <p class="choose-description">Choose a destination that aligns with your travel goals – whether seeking relaxation in the Maldives' pristine beaches.</p>
           </div>
           <div class="choose-card">
             <div class="card1">
               <img src="hotel 1.svg" alt="">
               <h3 class="choose-card-title">Handpicked Hotels</h3>
-              <p class="choose-card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+              <p class="choose-card-description">Discover your ideal destination by considering factors like climate, activities, and cultural richness; </p>
             </div>
             <div class="card2">
               <img src="map 1.svg" alt="">
               <h3 class="choose-card-title">World Class Service</h3>
-              <p class="choose-card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+              <p class="choose-card-description">Discover your ideal destination by considering factors like climate, activities, and cultural richness; </p>
             </div>
           </div>
           <div class="card3">
             <img src="price-tag 1.svg" alt="">
             <h3 class="choose-card-title">Best Price Guarantee</h3>
-            <p class="choose-card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            <p class="choose-card-description">Discover your ideal destination by considering factors like climate, activities, and cultural richness; </p>
           </div>
         </section>
         <section class="simpe-place-section">
           <div class="simple-place-content">
-               <h1 class="simple-place-title popular-title">A Simple Perfect Place To Get Lost</h1>
-               <p class="simple-place-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p><br>
-               <p class="p1">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p><br>
-               <p class="p1">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+               <h1 class="simple-place-title popular-title">A Simple Perfect Place To Get Lost </p>
+               <p class="p1">Explore the serene beauty of Santorini's white-washed landscapes and azure waters, or immerse yourself in the vibrant culture of Tokyo's bustling streets and cutting-edge technology. </p>
+               <p class="p1">Explore the serene beauty of Santorini's white-washed landscapes and azure waters, or immerse yourself in the vibrant culture of Tokyo's bustling streets and cutting-edge technology. </p>
                <button class="btn-primary">See More</button>
           </div>
           <div class="simple-place-img">
@@ -125,6 +125,15 @@
              <img src="maximize 1.svg" alt="">
              <img src="Frame (2).svg" alt=""> -->
           </div>
+        </section>
+        <section class="recent-visit">
+            <div class="recent-container">
+               <h2 class="recent-title">Recently Visited</h2>
+               <p>Strolling along the sun-kissed beaches of Santorini, the azure waters and whitewashed architecture created a picturesque Mediterranean escape. In Kyoto's enchanting bamboo groves, the rustling leaves and towering stalks painted a serene backdrop for a truly immersive Japanese journey.</p>
+               <p>Recently explored vibrant Tokyo, savoring the eclectic mix of traditional and modern culture. Breathtaking landscapes and warm hospitality made it an unforgettable travel experience.</p>
+               <p>Immersed in the rich history of Rome, where ancient ruins and timeless art created a captivating journey through the heart of Italy's cultural legacy. Culinary delights and charming streets added a delightful touch to the adventure.</p>
+               <button class="btn-banner">Know More</button>
+            </div>
         </section>
         <section class="newsletter-section">
             <div class="newsletter-content">
@@ -144,9 +153,25 @@
             </div>
            
         </section>
+        
+
     </main>
     <footer>
-
+      <div class="footer-img-title">
+        <img src="./Images/Group 40071 (2).png" alt="">
+        <h2 class="nav-title"><span class="travelnav">Travel</span><span class="ease">Ease</span></h2>
+       </div>
+       <div class="footer-description">
+        <p>Travelease opens doors to seamless exploration, offering a blend of convenience and wanderlust, ensuring every journey is a delightful voyage. Experience travel redefined with Travelease, where simplicity meets adventure, creating memorable escapes tailored just for you. </p>
+         <div class="social-link">
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-brands fa-github"></i></a>
+         </div>
+        <hr>
+       </div>
+       <div class="copyright">2017, All Rights Reserved.</div>
     </footer>
 </body>
 </html>
