--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
         </section>
         <section class="recent-visit">
             <div class="recent-container">
-               <h2 class="recent-title">Recently Visited</h2>
+               <h2 class="recent-title">About Us</h2>
                <p>Strolling along the sun-kissed beaches of Santorini, the azure waters and whitewashed architecture created a picturesque Mediterranean escape. In Kyoto's enchanting bamboo groves, the rustling leaves and towering stalks painted a serene backdrop for a truly immersive Japanese journey.</p>
                <p>Recently explored vibrant Tokyo, savoring the eclectic mix of traditional and modern culture. Breathtaking landscapes and warm hospitality made it an unforgettable travel experience.</p>
                <p>Immersed in the rich history of Rome, where ancient ruins and timeless art created a captivating journey through the heart of Italy's cultural legacy. Culinary delights and charming streets added a delightful touch to the adventure.</p>
-               <button class="btn-banner">Know More</button>
+               
             </div>
         </section>
         <section class="newsletter-section">
