--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+  
     <header class="header">
     <nav class="nav">
        <div class="nav-img-title">
@@ -72,7 +73,7 @@
         </section>
         <section class="destination-section">
            <div class="destination-title">Choose Your Destination</div>
-           <p>Choose a destination that aligns with your travel goals – whether seeking relaxation in the Maldives' pristine beaches,</p>
+           <p class="destination-description">Choose a destination that aligns with your travel goals – whether seeking relaxation in the Maldives' pristine beaches,</p>
            <div class="img2">
             <div class="imgone"><img src="./Images/Rectangle 5.png" alt=""><h3>Maldives</h3></div>
             <div class="imghalf"><img src="./Images/Rectangle 8.png" alt=""><h3>Indonesia</h3></div>
@@ -120,19 +121,21 @@
           <div class="simple-place-img">
              <img src="./Images/Group 40089.png" alt="">
              <h2>Watch Our Mountain in Bangladesh</h2>
-             <!-- <img src="Frame (1).svg" alt="">
-             <img src="volume-x 1.svg" alt="">
-             <img src="maximize 1.svg" alt="">
-             <img src="Frame (2).svg" alt=""> -->
           </div>
         </section>
-        <section class="recent-visit">
-            <div class="recent-container">
-               <h2 class="recent-title">About Us</h2>
-               <p>Strolling along the sun-kissed beaches of Santorini, the azure waters and whitewashed architecture created a picturesque Mediterranean escape. In Kyoto's enchanting bamboo groves, the rustling leaves and towering stalks painted a serene backdrop for a truly immersive Japanese journey.</p>
-               <p>Recently explored vibrant Tokyo, savoring the eclectic mix of traditional and modern culture. Breathtaking landscapes and warm hospitality made it an unforgettable travel experience.</p>
-               <p>Immersed in the rich history of Rome, where ancient ruins and timeless art created a captivating journey through the heart of Italy's cultural legacy. Culinary delights and charming streets added a delightful touch to the adventure.</p>
-               
+        <section class="world-section">
+          <div class="world-content">
+            <h2 class="choose-title"><span class="we">We</span> and <span class="we">W</span>orld</h2>
+            <p class="choose-description">Travel opens our eyes to diverse cultures, creating bridges of understanding between us and the world, <br> as we embark on a journey of exploration and connection.</p>
+          </div>
+            <div class="world-img">
+                <div class="grid-item"><img src="pexels-pixabay-274060 (1).jpg" alt="Image 1"></div>
+                <div class="grid-item"><img src="pexels-riccardo-228095 (1).jpg" alt="Image 2"></div>
+                <div class="grid-item"><img src="pexels-rudy-kirchner-831062 (1).jpg" alt="Image 3"></div>
+                <div class="grid-item"><img src="pexels-jesper-19780910.jpg" alt="Image 4"></div>
+                <div class="grid-item"><img src="pexels-joe-fikar-19137317.jpg" alt="Image 5"></div>
+                <div class="grid-item"><img src="pexels-max-ravier-4864108.jpg" alt="Image 6"></div>
+                
             </div>
         </section>
         <section class="newsletter-section">
